# .tripPlannerFromScrtach

./: pyproject.toml
starter_template/: agents.py  main.py  tasks.py
starter_template/tools/: calculator_tools.py  search_tools.py
